// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FreeTextForm tests  rendering active form 1`] = `
<div
  className="columns"
>
  <div
    className="column"
  >
    <TextField
      className="mui-long-labels-fix"
      disabled={false}
      errorText={null}
      floatingLabelFixed={false}
      floatingLabelText="Item name"
      fullWidth={true}
      hintText="Please type the item name"
      multiLine={false}
      onChange={[Function]}
      onKeyPress={[Function]}
      rows={1}
      type="text"
      underlineShow={true}
      value=""
    />
  </div>
  <div
    className="column is-narrow"
  >
    <RaisedButton
      className="is-mui-spacing-button"
      disabled={true}
      fullWidth={true}
      label="Add"
      labelPosition="after"
      onClick={[Function]}
      primary={true}
      secondary={false}
    />
  </div>
</div>
`;

exports[`FreeTextForm tests  rendering disabled form 1`] = `
<div
  className="columns"
>
  <div
    className="column"
  >
    <TextField
      className="mui-long-labels-fix"
      disabled={true}
      errorText={null}
      floatingLabelFixed={false}
      floatingLabelText="Item name"
      fullWidth={true}
      hintText="Please type the item name"
      multiLine={false}
      onChange={[Function]}
      onKeyPress={[Function]}
      rows={1}
      type="text"
      underlineShow={true}
      value=""
    />
  </div>
  <div
    className="column is-narrow"
  >
    <RaisedButton
      className="is-mui-spacing-button"
      disabled={true}
      fullWidth={true}
      label="Add"
      labelPosition="after"
      onClick={[Function]}
      primary={true}
      secondary={false}
    />
  </div>
</div>
`;

exports[`FreeTextForm tests  rendering reminder to add input 1`] = `
<div
  className="columns"
>
  <div
    className="column"
  >
    <TextField
      className="mui-long-labels-fix"
      disabled={false}
      errorText={null}
      floatingLabelFixed={false}
      fullWidth={true}
      multiLine={false}
      onChange={[Function]}
      onKeyPress={[Function]}
      rows={1}
      type="text"
      underlineShow={true}
      value="one"
    />
    <div
      className="validationWarningMessage"
    >
      reminder text
    </div>
  </div>
  <div
    className="column is-narrow"
  >
    <RaisedButton
      className="is-mui-spacing-button"
      disabled={true}
      fullWidth={true}
      labelPosition="after"
      onClick={[Function]}
      primary={true}
      secondary={false}
    />
  </div>
</div>
`;
